# HM

./: Cargo.toml  clippy.toml  todo.md
game/: Cargo.toml
game/src/: lib.rs
hm/: Cargo.toml
hm/src/: main.rs
hmc/: .clang-format  .clangd  .gitignore  build.bat  build.sh
hmc/.zed/: tasks.json
hmc/src/: handmade.c  handmade.h  linux_sdl_handmade.c  linux_sdl_handmade.h  win32_handmade.c  win32_handmade.h
interface/: Cargo.toml
interface/src/: lib.rs
linux_platform/: Cargo.toml
linux_platform/src/: lib.rs
src/: lib.rs  main.rs
win32_platform/: Cargo.toml
win32_platform/src/: lib.rs  main.rs
