[package]
name = "win32_platform"
version.workspace = true
edition.workspace = true

[dependencies]
interface = { path = "../interface", default-features = false }

[dependencies.windows-sys]
version = "0.61.2"

features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[features]
internal_build = ["interface/internal_build"]

default = ["internal_build"]